crates/toml_edit/tests/snapshots/invalid/datetime/only-TZ.stderr
TOML parse error at line 1, column 7
  |
1 | foo = TZ
  |       ^^
invalid boolean, expected `true`
